metadata-sfdx/force-app/main/default/objects/SCConfigSetting__c/SCConfigSetting__c.object-meta.xml
<CustomObject>
    <label>SC Config: Setting</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>