metadata-sfdx/force-app/main/default/objects/SCConfigSetting__c/fields/DefaultResolutionOptions__c.field-meta.xml
<CustomField>
    <fullName>DefaultResolutionOptions__c</fullName>
    <label>Resolution Options</label>
    <type>TextArea</type>
</CustomField>