metadata-sfdx/force-app/main/default/objects/SCConfigSetting__c/fields/DisputeType__c.field-meta.xml
<CustomField>
    <fullName>DisputeType__c</fullName>
    <label>Dispute Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Property damage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>