metadata-sfdx/force-app/main/default/objects/SCConfigSetting__c/fields/MaxFileSize__c.field-meta.xml
<CustomField>
    <fullName>MaxFileSize__c</fullName>
    <label>Max File Size (in MB)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>