metadata-sfdx/force-app/main/default/objects/SCConfigSetting__c/fields/MaxOfCalendarDaysAllowed__c.field-meta.xml
<CustomField>
    <fullName>MaxOfCalendarDaysAllowed__c</fullName>
    <label>Max # of Calendar Days Allowed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>