metadata-sfdx/force-app/main/default/objects/SCConfigSetting__c/fields/MaxOfInitiatingOffers__c.field-meta.xml
<CustomField>
    <fullName>MaxOfInitiatingOffers__c</fullName>
    <label>Max # of Initiating Offers</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>