metadata-sfdx/force-app/main/default/objects/SCConfigSetting__c/fields/MaxOfRespondingOffers__c.field-meta.xml
<CustomField>
    <fullName>MaxOfRespondingOffers__c</fullName>
    <label>Max # of Responding Offers</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>