metadata-sfdx/force-app/main/default/objects/SCConfigSetting__c/fields/MaxTimeForDisputeInDays__c.field-meta.xml
<CustomField>
    <fullName>MaxTimeForDisputeInDays__c</fullName>
    <label>Max Time for Dispute (in Days)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>