metadata-sfdx/force-app/main/default/objects/SCConfigSetting__c/recordTypes/SolutionCenterConfiguration.recordType-meta.xml
<RecordType>
    <fullName>SolutionCenterConfiguration</fullName>
    <active>true</active>
    <description>Record type used to manage the solution center configurations.</description>
    <label>Solution Center Configuration</label>
</RecordType>